// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Tests should render with antd <Pagination/> component 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 600px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="1200"
      />
    </div>
    <ul
      class="ant-pagination ant-pagination-mini css-dev-only-do-not-override-49qm"
    >
      <li
        class="ant-pagination-total-text"
      >
        共计 0 条
      </li>
      <li
        aria-disabled="true"
        class="ant-pagination-prev ant-pagination-disabled"
        title="Previous Page"
      >
        <button
          class="ant-pagination-item-link"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="left"
            class="anticon anticon-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </span>
        </button>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
        tabindex="0"
        title="1"
      >
        <a
          rel="nofollow"
        >
          1
        </a>
      </li>
      <li
        aria-disabled="true"
        class="ant-pagination-next ant-pagination-disabled"
        title="Next Page"
      >
        <button
          class="ant-pagination-item-link"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="right"
            class="anticon anticon-right"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Pagination Tests should render with antd <Pagination/> component 2`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 600px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="1200"
      />
    </div>
    <ul
      class="ant-pagination ant-pagination-mini css-dev-only-do-not-override-49qm"
    >
      <li
        class="ant-pagination-total-text"
      >
        共计 2 条
      </li>
      <li
        aria-disabled="true"
        class="ant-pagination-prev ant-pagination-disabled"
        title="Previous Page"
      >
        <button
          class="ant-pagination-item-link"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="left"
            class="anticon anticon-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </span>
        </button>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a
          rel="nofollow"
        >
          1
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a
          rel="nofollow"
        >
          2
        </a>
      </li>
      <li
        aria-disabled="false"
        class="ant-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <button
          class="ant-pagination-item-link"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="right"
            class="anticon anticon-right"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </button>
      </li>
      <li
        class="ant-pagination-options"
      >
        <div
          class="ant-pagination-options-quick-jumper"
        >
          Go to
          <input
            aria-label="Page"
            type="text"
            value=""
          />
          Page
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
